--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
     "name": "@iac-factory/walker",
+    "version": "0.2.7",
+    "description": "File-Descriptor Event Handler + Listener",
     "optionalDependencies": {
         "@swc/core": "^1.2.182",
         "@swc/helpers": "^0.3.15",
-        "@typescript-eslint/eslint-plugin": "^5.25.0",
+        "tslib": "^2.4.0",
         "ts-node": "^10.7.0"
+    },
+    "publishConfig": {
+        "access": "public",
+        "tag": "latest"
     },
     "devDependencies": {
         "@types/node": "^17.0.34",
         "@types/jest": "^27.5.1",
-        "eslint": "^8.16.0",
-        "eslint-plugin-import": "^2.26.0",
+        "@jest/globals": "^28.1.0",
+        "@jest/types": "^28.1.0",
         "jest": "^28.1.0",
-        "nodemon": "^2.0.16",
         "typescript": "^4.6.4"
     },
     "dependencies": {
