--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
     "name": "@iac-factory/walker",
     "version": "0.2.11",
     "description": "File-Descriptor Event Handler + Listener",
-    "optionalDependencies": {
-        "@swc/core": "^1.2.182",
-        "@swc/helpers": "^0.3.15",
-        "ts-node": "^10.7.0"
-    },
     "publishConfig": {
         "access": "public",
         "tag": "latest"
@@ -17,7 +12,10 @@
         "@jest/globals": "^28.1.0",
         "@jest/types": "^28.1.0",
         "jest": "^28.1.0",
-        "typescript": "^4.6.4"
+        "typescript": "^4.6.4",
+        "@swc/core": "^1.2.182",
+        "@swc/helpers": "^0.3.15",
+        "ts-node": "^10.7.0"
     },
     "dependencies": {
         "@iac-factory/ecma": "^0.1.10",
